[gd_scene load_steps=7 format=3 uid="uid://bvweswfxul5oo"]

[ext_resource type="Script" uid="uid://5ic8vnmqsxg4" path="res://scenes/main_menu.gd" id="1_rxnnp"]
[ext_resource type="Theme" uid="uid://cav6s4wk6wpbp" path="res://themes/ui.tres" id="1_xyfva"]
[ext_resource type="PackedScene" uid="uid://f3wv5ma8xvb0" path="res://scenes/ui/settings.tscn" id="3_wo74h"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_bqqt6"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_wu84c"]
sky_material = SubResource("ProceduralSkyMaterial_bqqt6")

[sub_resource type="Environment" id="Environment_8ln24"]
background_mode = 2
sky = SubResource("Sky_wu84c")
tonemap_mode = 2

[node name="MainMenu" type="Node"]
script = ExtResource("1_rxnnp")
music_volume = null
sound_effects_volume = null

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8ln24")

[node name="Camera3D" type="Camera3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopLevel" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xyfva")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TopLevel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -132.0
offset_right = 200.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2

[node name="LblTitle" type="Label" parent="UI/TopLevel/VBoxContainer"]
custom_minimum_size = Vector2(300, 1.45519e-11)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "<Game Name>"
horizontal_alignment = 1
autowrap_mode = 3

[node name="LblAuthor" type="Label" parent="UI/TopLevel/VBoxContainer"]
custom_minimum_size = Vector2(300, 1.45519e-11)
layout_mode = 2
size_flags_horizontal = 4
text = "A game by Matt Giuca"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer" type="Control" parent="UI/TopLevel/VBoxContainer"]
custom_minimum_size = Vector2(1.45519e-11, 50)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/TopLevel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="UI/TopLevel/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(400, 1.45519e-11)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="BtnStart" type="Button" parent="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="BtnLevelSelect" type="Button" parent="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="BtnSettings" type="Button" parent="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="BtnCredits" type="Button" parent="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="BtnQuit" type="Button" parent="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="Settings" parent="UI" instance=ExtResource("3_wo74h")]
unique_name_in_owner = true
visible = false

[node name="LevelChooser" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -64.0
offset_right = 110.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xyfva")

[node name="MarginContainer" type="MarginContainer" parent="UI/LevelChooser"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LevelChooser/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/LevelChooser/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Choose Level"
horizontal_alignment = 1
autowrap_mode = 3

[node name="LstLevels" type="ItemList" parent="UI/LevelChooser/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/LevelChooser/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnBack" type="Button" parent="UI/LevelChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Credits" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -253.0
offset_right = 360.0
offset_bottom = 253.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xyfva")

[node name="MarginContainer" type="MarginContainer" parent="UI/Credits"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Credits/MarginContainer"]
layout_mode = 2

[node name="TxtCredits" type="RichTextLabel" parent="UI/Credits/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 450)
layout_mode = 2
focus_mode = 2
bbcode_enabled = true
text = "[font_size=25][b]Game Name[/b][/font_size]
Work-in-progress prototype
Â© <year> by Matt Giuca

[b]Game design, programming[/b]
Matt Giuca

[b]3D artwork[/b]

[ul]
All other 3D art by Matt Giuca
[/ul]

[b]2D artwork[/b]

[ul]
All other 2D art by Matt Giuca
[/ul]

[b]Sounds[/b]

[ul]
All other sounds by Matt Giuca
[/ul]

[b]Fonts[/b]

[ul]
\"Play\"
[ul]
Copyright (c) 2011, Jonas Hecksher, Playtypes, e-types AS (lasse@e-types.com), with Reserved Font Name 'Play', 'Playtype', 'Playtype Sans'.
This Font Software is licensed under the SIL Open Font License, Version 1.1.
https://openfontlicense.org
[/ul]
[/ul]

[b]Engine[/b]

This game uses Godot Engine, available under the following license:

Copyright (c) 2014-present Godot Engine contributors.
Copyright (c) 2007-2014 Juan Linietsky, Ariel Manzur.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE."

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnBack" type="Button" parent="UI/Credits/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BtnLevelSelect" to="." method="_on_btn_level_select_pressed"]
[connection signal="pressed" from="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BtnCredits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="UI/TopLevel/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="closed" from="UI/Settings" to="." method="_on_settings_closed"]
[connection signal="item_activated" from="UI/LevelChooser/MarginContainer/VBoxContainer/LstLevels" to="." method="_on_lst_levels_item_activated"]
[connection signal="item_clicked" from="UI/LevelChooser/MarginContainer/VBoxContainer/LstLevels" to="." method="_on_lst_levels_item_clicked"]
[connection signal="pressed" from="UI/LevelChooser/MarginContainer/VBoxContainer/HBoxContainer/BtnBack" to="." method="_on_levelchooser_btn_back_pressed"]
[connection signal="focus_entered" from="UI/Credits/MarginContainer/VBoxContainer/TxtCredits" to="." method="_on_txt_credits_focus_entered"]
[connection signal="focus_exited" from="UI/Credits/MarginContainer/VBoxContainer/TxtCredits" to="." method="_on_txt_credits_focus_exited"]
[connection signal="gui_input" from="UI/Credits/MarginContainer/VBoxContainer/TxtCredits" to="." method="_on_txt_credits_gui_input"]
[connection signal="meta_clicked" from="UI/Credits/MarginContainer/VBoxContainer/TxtCredits" to="." method="_on_txt_credits_meta_clicked"]
[connection signal="pressed" from="UI/Credits/MarginContainer/VBoxContainer/HBoxContainer/BtnBack" to="." method="_on_credits_btn_back_pressed"]
